@@ -1,5 +1,6 @@
 Version Next
 
+    - Vaadin7: fix bug that broke VaadinApplication.get() when subclassed
     - Update AstractDAO to use EntityManager directly (issue #14)
     - Update vaadin7 package for 7.0.0.beta9
     - Added new class DelayedAction
